--- a/Templates/ds250_coding_challenge_template_v0.qmd
+++ b/Templates/ds250_coding_challenge_template_v0.qmd
@@ -36,15 +36,58 @@ url = "https://github.com/byuidatascience/data4names/raw/master/data-raw/names_y
 names = pd.read_csv(url)
 ```
 
-## Question #:
+## Question 1:
 
-### [Replace with the text from question #]
+### [Replace with the text from question 1]
 
 ```{python}
-# Question # Code
+# Question 1 Code
 
 
 
 ```
 
-When done with a question, render it to a `.html` file and upload it for the question. Either re-downolad this template or file -> save as -> a new file name and then replace the text in the question with the new question text.
+## Question 2:
+
+### [Replace with the text from question 2]
+
+```{python}
+# Question 2 code
+
+
+
+```
+
+## Question 3:
+
+### [Replace with the text from question 3]
+
+
+```{python}
+# Question 3 Code
+
+
+
+```
+
+## Question 4:
+
+### [Replace with the text from question 4]
+
+```{python}
+# Question 4 Code
+
+
+
+```
+
+## Question 5:
+
+### [Replace with the text from question 5]
+
+```{python}
+# Question 5 Code
+
+
+
+```
