--- a/Setup/python_lib.qmd
+++ b/Setup/python_lib.qmd
@@ -30,7 +30,7 @@ This is the preferred install method for both PC and Mac:
 #%%
 # copy paste this into a python file in vs code and run this cell
 import sys
-!{sys.executable} -m pip install numpy pandas scikit-learn plotly.express nbformat nbclient pyyaml
+!{sys.executable} -m pip install numpy pandas scikit-learn lets-plot palmerpenguins nbformat nbclient pyyaml
 ```
 
 
@@ -38,7 +38,7 @@ import sys
 
 ```python
 # default way
-pip install numpy pandas scikit-learn plotly.express nbformat nbclient pyyaml
+pip install numpy pandas scikit-learn lets-plot palmerpenguins nbformat nbclient pyyaml
 ```
 
 
