--- a/Templates/ds250_coding_challenge_template.qmd
+++ b/Templates/ds250_coding_challenge_template.qmd
@@ -27,7 +27,7 @@ format:
 # Read in libraries
 import pandas as pd
 import numpy as np
-import plotly.express as px
+from lets_plot import *
 ```
 
 ```{python}
