--- a/Templates/ds250_project_template.qmd
+++ b/Templates/ds250_project_template.qmd
@@ -34,7 +34,7 @@ import pandas as pd
 import numpy as np
 from lets_plot import *
 
-LetsPlot.setup_html()
+LetsPlot.setup_html(isolated_frame=True)
 ```
 
 
