--- a/Templates/ds250_project_template_clean.qmd
+++ b/Templates/ds250_project_template_clean.qmd
@@ -32,7 +32,7 @@ import pandas as pd
 import numpy as np
 from lets_plot import *
 
-LetsPlot.setup_html(isolated_frame=True)
+LetsPlot.setup_html()
 ```
 
 
