--- a/Projects/project_1.qmd
+++ b/Projects/project_1.qmd
@@ -39,10 +39,10 @@ This csv file contains the number of times a name was given to a child in a spec
 ### Data
 
 ::: {.callout-note collapse="true"}
-Every data science project should start with data, and our class projects are no different. Each project will have __'Download'__ and __'Information'__ links like the ones below.
+Every data science project should start with data, and our class projects are no different. Each project will have __'URL'__ and __'Information'__ links like the ones below. Right click the __'URL'__ link and select "Copy Link" to use it to import the data into your project. This is the preferred method to get data into your report as you will be publishing your report to GitHub. If you choose to download the data file to your computer you will need to save it in the same folder as your `project#.qmd` file for it to work correclty in GitHub. 
 :::
 
-__Download:__ [names_year.csv](https://github.com/byuidatascience/data4names/raw/master/data-raw/names_year/names_year.csv)   
+__URL:__ [names_year.csv](https://github.com/byuidatascience/data4names/raw/master/data-raw/names_year/names_year.csv)   
 __Information:__ [data.md](https://github.com/byuidatascience/data4names/blob/master/data.md)
 
 
@@ -104,6 +104,8 @@ When you have completed the report, you will need to follow this process to subm
     c. How you see it will be how it is viewed for grading
     d. If there is an error in any cell of the quarto files, the rendering will stop and you will need to fix the error before rendering again (if you get stuck post your error in Slack)
 1. Once the report is confirmed close the preview and open the `GitHub Desktop` application
+1. Confirm you are in the correct repository in the top left corner of the screen
+1. Confirm you are on the correct branch `Main` in the top left corner of the screen (Never change off the `Main` branch)
 1. Type a summary of the changes in the `Summary` box
 1. Click `Commit to main` blue button in the bottom left corner
 1. Click `Push origin` blue button in the middle right of the screen
