--- a/Projects/project_3.qmd
+++ b/Projects/project_3.qmd
@@ -35,6 +35,10 @@ For this project, the Client wants SQL queries that they can use to retrieve dat
 
 ### Data
 
+::: {.callout-note collapse="false"}
+Every data science project should start with data, and our class projects are no different. Each project will have __'URL'__ and __'Information'__ links like the ones below. Project 3 will use the Lahman Baseball Database. You will need to download the database and set it up on your computer to complete the project. Place it inside the DS250 Projects folder within your repository next to the project_3.qmd file. Note: Right click the __'Download'__ link and select "Save Link As" to download the data to your computer.
+:::
+
 __Download:__ [lahmansbaseballdb](/Data/lahmansbaseballdb.sqlite)  
 __Information:__ [Lahman Data Dictionary](/Data/readme2014.txt)  
 __Setup Instructions:__ [See SQL Setup](/Setup/sql_setup.qmd)
@@ -110,6 +114,8 @@ When you have completed the report, you will need to follow this process to subm
     c. How you see it will be how it is viewed for grading
     d. If there is an error in any cell of the quarto files, the rendering will stop and you will need to fix the error before rendering again (if you get stuck post your error in Slack)
 1. Once the report is confirmed close the preview and open the `GitHub Desktop` application
+1. Confirm you are in the correct repository in the top left corner of the screen
+1. Confirm you are on the correct branch `Main` in the top left corner of the screen (Never change off the `Main` branch)
 1. Type a summary of the changes in the `Summary` box
 1. Click `Commit to main` blue button in the bottom left corner
 1. Click `Push origin` blue button in the middle right of the screen
